--- a/Archivos/index.html
+++ b/Archivos/index.html
@@ -1,47 +1,63 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
     <title>F.C Barcelona</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="logo">
-      <h1>F.C Barcelona, destinado a la grandeza</h1>
-      <img src="imagenes/logo.jpg" alt=""/>
-    </div>
-    <div class="informacion">
-      <h2>¿Porqué esta destinado a la grandeza?</h2>
-      <p>La temporada 2019-2020 no fue la mejor en la historia del F.C Barcelona,
-      de hecho muchos deben pensar que estoy loco al decir que este equipo esta
-      destinado a ser grande. Sin embargo, el equipo promete mucho si observamos
-      los últimos partidos jugados. Después de la horrible derrota por 8-2 a favor
-      del Bayern de Múnich, el equpo se decidio a realizar cambios importantes en su
-      plantilla, vendieron jugadores importantes del equipo como lo son Ivan Rakitić,
-      Arthur Melo y Luis Suarez por mencionar algunos, despidieron a Setien y realizaron
-      cambios a nivel interno. En principio esto puede parecer una decision errada, pero
-      cuando vemos la calidad de Ansu Fati, Philippe Coutinho,Trincao y Dest podemos saber
-      que estas decisiones no fueron a la ligera, sino se dieron con el objetivo de renovar
-      la sangre y la plantilla del club. El Club lleva 3 partidos de liga, con 2 ganados y
-      1 empate, mostrando un buen nivel de juego, destacado un juego directo liderado por Coutinho,
-      Ansu Fati y Messi. La tendencia en los partidos nos da pie a ilusionarnos y a llegar a pensar
-      que la temporada 2020-2021 puede estar llena de titulos para el que fue, en su momento, el
-      mejor equipo del mundo.</p>
-    </div>
-    <div class="lista">
-      <h3>Mi aliniacion titular (4-3-3)</h3>
-      <ol>
-        <li>Marc-André ter Stegen</li>
-        <li>Jordi Alba</li>
-        <li>Piqué</li>
-        <li>Lenglet</li>
-        <li>Dest</li>
-        <li>Busquets</li>
-        <li>Frenkie De Jong</li>
-        <li>Philippe Coutinho</li>
-        <li>Lionel Messi</li>
-        <li>Antoine Griezmann</li>
-        <li>Ansu Fati</li>
-      </ol>
+    <h1 class = "text-center"><strong>F.C Barcelona, destinado a la grandeza</strong></h1>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-4">
+          <img src="imagenes/estadio.jpg" alt=""/>
+        </div>
+        <div class="col-4">
+          <img src="imagenes/jugador.jpg" alt=""/>
+        </div>
+        <div class="col-4">
+          <img src="imagenes/logo.jpg" alt=""/>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-9">
+          <h2>¿Porqué esta destinado a la grandeza?</h2>
+          <p>La temporada 2019-2020 no fue la mejor en la historia del F.C Barcelona,
+          de hecho muchos deben pensar que estoy loco al decir que este equipo esta
+          destinado a ser grande. Sin embargo, el equipo promete mucho si observamos
+          los últimos partidos jugados. Después de la
+          <a href = "https://en.wikipedia.org/wiki/FC_Barcelona_2%E2%80%938_FC_Bayern_Munich">horrible derrota por 8-2 a favor
+          del Bayern de Múnich</a>, el equpo se decidio a realizar cambios importantes en su
+          plantilla, vendieron jugadores importantes del equipo como lo son Ivan Rakitić,
+          Arthur Melo y Luis Suarez por mencionar algunos, despidieron a Setien y realizaron
+          cambios a nivel interno. En principio esto puede parecer una decision errada, pero
+          cuando vemos la calidad de Ansu Fati, Philippe Coutinho,Trincao y Dest podemos saber
+          que estas decisiones no fueron a la ligera, sino se dieron con el objetivo de renovar
+          la sangre y la plantilla del club. El Club lleva 3 partidos de liga, con 2 ganados y
+          1 empate, mostrando un buen nivel de juego, destacado un juego directo liderado por Coutinho,
+          Ansu Fati y Messi. La tendencia en los partidos nos da pie a ilusionarnos y a llegar a pensar
+          que la temporada 2020-2021 puede estar llena de titulos para el que fue, en su momento, el
+          mejor equipo del mundo. Para más información haga click
+          <a href= "https://es.wikipedia.org/wiki/F%C3%BAtbol_Club_Barcelona">aquí</a>.</p>
+        </div>
+        <div class="col-3">
+          <h3>Mi aliniacion titular (4-3-3)</h3>
+          <ol>
+            <li>Marc-André ter Stegen</li>
+            <li>Jordi Alba</li>
+            <li>Piqué</li>
+            <li>Lenglet</li>
+            <li>Dest</li>
+            <li>Busquets</li>
+            <li>Frenkie De Jong</li>
+            <li>Philippe Coutinho</li>
+            <li>Lionel Messi</li>
+            <li>Antoine Griezmann</li>
+            <li>Ansu Fati</li>
+          </ol>
+        </div>
+      </div>
     </div>
   </body>
 </html>
