--- a/Archivos/index.html
+++ b/Archivos/index.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-9">
+        <div class="col-9 Texto">
           <h2>¿Porqué esta destinado a la grandeza?</h2>
           <p>La temporada 2019-2020 no fue la mejor en la historia del F.C Barcelona,
           de hecho muchos deben pensar que estoy loco al decir que este equipo esta
@@ -41,7 +41,7 @@
           mejor equipo del mundo. Para más información haga click
           <a href= "https://es.wikipedia.org/wiki/F%C3%BAtbol_Club_Barcelona">aquí</a>.</p>
         </div>
-        <div class="col-3">
+        <div class="col-3 Lista">
           <h3>Mi aliniacion titular (4-3-3)</h3>
           <ol>
             <li>Marc-André ter Stegen</li>
